--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html lang="en">
 <head>
     <!-- Head content remains the same -->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Title is changed -->
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
@@ -23,12 +27,13 @@
             <div class="centered-links">
                 <a href="https://arxiv.org/abs/2312.11856">[Paper]</a> |
                 <a href="https://github.com/jr-guo/3DGAN-SSL/">[Code]</a> |
-                <a href="utils/soon.html">[Video]</a>
+                <a href="utils/soon.html">[Video]</a> |
+                <a href="utils/soon.html">[Samples]</a>
             </div>
         </section>        
     </main>
     <footer>
-        <p>© 2023 Your Name</p>
+        <p>© 2023</p>
     </footer>
 </body>
 </html>
