--- a/index.html
+++ b/index.html
@@ -13,15 +13,13 @@
     </header>
     <main>
         <section>
-            <h2>Resources</h2>
+            <!-- <h2>Resources</h2> -->
             <div class="centered-links">
                 <a href="https://arxiv.org/abs/2312.11856">[Paper]</a> |
                 <a href="https://github.com/jr-guo/3DGAN-SSL/">[Code]</a> |
                 <a href="utils/soon.html">[Video]</a> |
                 <a href="utils/soon.html">[Samples]</a>
             </div>
-        </section>    
-        <section>
             <!-- <h2>Authors</h2> -->
             <p>Jiarong Guo (HKUST); Xiaogang Xu (Zhejiang Labs); Hengshuang Zhao (HKU)</p>
         </section>
