--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
                 <a href="utils/soon.html">[Samples]</a>
             </div>
             <!-- <h2>Authors</h2> -->
-            <p>Jiarong Guo (HKUST); Xiaogang Xu (Zhejiang Labs); Hengshuang Zhao (HKU)</p>
+            <div class="centered-links">
+                <p>Jiarong Guo (HKUST); Xiaogang Xu (Zhejiang Labs); Hengshuang Zhao (HKU)</p>
+            </div>
         </section>
         <section>
             <h2>Abstract</h2>
